sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:9: error: ';' expected but 'false' found.
      if(plusPetit(i,i+1))==false){
                            ^